Samples/VCS/Test1/Litecad.cs

using System;
using System.Runtime.InteropServices;

public delegate void F_MOUSEMOVE (int hLcWnd, int Button, int Flags, int Xwin, int Ywin, double X, double Y);
public delegate void F_MOUSEDOWN (int hLcWnd, int Button, int Flags, int Xwin, int Ywin, double X, double Y);
public delegate void F_MOUSEUP (int hLcWnd, int Button, int Flags, int Xwin, int Ywin, double X, double Y);
public delegate void F_MOUSEDBLCLK (int hLcWnd, int Button, int Flags, int Xwin, int Ywin, double X, double Y);
public delegate void F_MOUSESNAP (int hLcWnd, double Delta, ref double pX, ref double pY);
public delegate void F_MOUSELEAVE (int hLcWnd);
public delegate void F_MOUSEWHEEL (int hLcWnd, int Flags, int Delta);
public delegate void F_KEYDOWN (int hLcWnd, int VirtKey, int Flags, bool bCtrl, bool bShift);
public delegate void F_PAINT (int hLcWnd, int hView, int Mode, IntPtr hDC, int Left, int Top, int Right, int Bottom);
public delegate void F_ZOOM (int hLcWnd, double Left, double Bottom, double Right, double Top, double PixelSize);
public delegate void F_SELECTVIEW (int hLcWnd, int hView);
public delegate void F_GETPOINT (int hLcWnd, int hView, int Index, double X, double Y);
public delegate void F_ADDCOMMAND (int hLcWnd);
public delegate void F_CMD_START (int hCmd, int Prm);
public delegate void F_CMD_FINISH (int hCmd);
public delegate void F_CMD_MOUSEDOWN (int hCmd, int Button, int Flags, int Xwin, int Ywin, double X, double Y);
public delegate void F_CMD_MOUSEUP (int hCmd, int Button, int Flags, int Xwin, int Ywin, double X, double Y);
public delegate void F_CMD_MOUSEMOVE (int hCmd, IntPtr hDC, int Flags, int Xwin, int Ywin, double X, double Y);
public delegate void F_CMD_STRING (int hCmd, string szStr);
public delegate void F_ADDENTITY (int hDrw, int hBlock, int hEntity);
public delegate void F_REGEN (int hDrw, int hView, int Percent);
public delegate void F_FIOPROGRESS (int hDrw, int Mode, int IntVal, string szFileName);
public delegate void F_SELECTION (int hDrw, int hBlock, bool bSelect, int nEnts, int hEnt, int nTotal);
public delegate void F_PROPCHANGED (int hDrw, int idProp, int hObj);
public delegate void F_GRIPSELECT (int hEnt, int iGrip, double X, double Y);
public delegate void F_GRIPMOVE (int hEnt, int iGrip, ref double pX, ref double pY, ref double pAngle, bool bDrag);
public delegate void F_ENTERASE (int hEnt);
public delegate void F_ENTMOVE (int hEnt, double DX, double DY, bool bDrag);
public delegate void F_ENTROTATE (int hEnt, double X0, double Y0, double Angle, bool bDrag);
public delegate void F_ENTSCALE (int hEnt, double X0, double Y0, double Scale, bool bDrag);
public delegate void F_ENTMIRROR (int hEnt, double X1, double Y1, double X2, double Y2, bool bDrag);
public delegate void F_FONTREPLACE (int hDrw, string szStyleName, string szOrigName);
public delegate void F_ADDSTR ();
public delegate void F_HELP (int hDrw, int idTopic);
